add Rank to leaderboard

--- a/ui/public/css/base.less
+++ b/ui/public/css/base.less
@@ -438,7 +438,7 @@ body {
 
 .leaderboard {
     width: 50%;
-    max-width: 200px;
+    //max-width: 200px;
     margin: 0 auto;
     text-align: left;
 }
@@ -456,6 +456,14 @@ body {
     font-size: 2.625em; // 42px;
     line-height: 1.25;
     font-weight: 700;
+    float: left;
+}
+
+.leaderboard__player__rank {
+    font-size: 2.625em; // 42px;
+    line-height: 1.25;
+    font-weight: 700;
+    text-align: right;
 }
 
 .leaderboard__player:nth-child(even) {
